{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 165,
  "lineage": "170c20e3-30ba-8d62-11d5-06a7f52f06d6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_with_ebs",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0000bebe516f304b1",
            "arn": "arn:aws:ec2:eu-west-1:701600680773:instance/i-0afc713e5a7918361",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0afc713e5a7918361",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bcdf92bbc68019b4",
            "private_dns": "ip-10-0-1-220.eu-west-1.compute.internal",
            "private_ip": "10.0.1.220",
            "public_dns": "ec2-3-249-51-109.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.249.51.109",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-062f1ba9ce3cd51af",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa52baf525671f3b",
            "tags": {
              "Name": "InstanceWithEBS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0170686b80c230cc4"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.allow-ssh",
            "aws_subnet.main-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:701600680773:internet-gateway/igw-02283311addca4207",
            "id": "igw-02283311addca4207",
            "owner_id": "701600680773",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0ac7e2cd4b749758c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-089ab3cc806583ab7",
            "owner_id": "701600680773",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02283311addca4207",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0ac7e2cd4b749758c"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d90ee4f4103b7f99",
            "route_table_id": "rtb-089ab3cc806583ab7",
            "subnet_id": "subnet-0aa52baf525671f3b"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b80c204922748199",
            "route_table_id": "rtb-089ab3cc806583ab7",
            "subnet_id": "subnet-0fee3d6324653ca08"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbe5d0e8817c00b4",
            "route_table_id": "rtb-089ab3cc806583ab7",
            "subnet_id": "subnet-01e8147b5f5c2bc71"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:701600680773:security-group/sg-0170686b80c230cc4",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0170686b80c230cc4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh",
            "name_prefix": "",
            "owner_id": "701600680773",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ac7e2cd4b749758c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:701600680773:subnet/subnet-02d861f5905a1a6bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-02d861f5905a1a6bd",
            "map_public_ip_on_launch": false,
            "owner_id": "701600680773",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-0ac7e2cd4b749758c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:701600680773:subnet/subnet-01a7696577f0b8af4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-01a7696577f0b8af4",
            "map_public_ip_on_launch": false,
            "owner_id": "701600680773",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-0ac7e2cd4b749758c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:701600680773:subnet/subnet-0bb88d0e86b89cb61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0bb88d0e86b89cb61",
            "map_public_ip_on_launch": false,
            "owner_id": "701600680773",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-0ac7e2cd4b749758c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:701600680773:subnet/subnet-0aa52baf525671f3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0aa52baf525671f3b",
            "map_public_ip_on_launch": true,
            "owner_id": "701600680773",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0ac7e2cd4b749758c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:701600680773:subnet/subnet-0fee3d6324653ca08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0fee3d6324653ca08",
            "map_public_ip_on_launch": true,
            "owner_id": "701600680773",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-0ac7e2cd4b749758c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:701600680773:subnet/subnet-01e8147b5f5c2bc71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-01e8147b5f5c2bc71",
            "map_public_ip_on_launch": true,
            "owner_id": "701600680773",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-0ac7e2cd4b749758c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:701600680773:vpc/vpc-0ac7e2cd4b749758c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a809032dc1c7839d",
            "default_route_table_id": "rtb-05d8a9765c484a82e",
            "default_security_group_id": "sg-0c416690e37685572",
            "dhcp_options_id": "dopt-d4586fb2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ac7e2cd4b749758c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05d8a9765c484a82e",
            "owner_id": "701600680773",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}